Fixed articles not showing up and implemented search feature

--- a/website/style.css
+++ b/website/style.css
@@ -221,6 +221,12 @@ li a {
 
 /* Search bar */ 
 
+.highlighted {
+  background-color: #EEFF75;
+  color: black;
+  border-radius: 6px;
+}
+
 .topnav .search-container {
   position: relative;
   width: 40vh;
